# AULAS-FLASK---DEVINHOUSE

./: .gitignore  README.md
SEMANA 09/Aula 02/meuapp/: app.py
SEMANA 09/Aula 02/meuapp/src/app/: __init__.py
SEMANA 09/Aula 02/meuapp/src/app/config/: __init__.py
SEMANA 09/Aula 02/meuapp/src/app/controllers/: developers.py  technologies.py
SEMANA 09/Aula 02/meuapp/src/app/routes/: __init__.py
SEMANA 09/Exercicios/exerciciossemana09/: db.json  pyproject.toml  requirements.txt
SEMANA 09/Exercicios/exerciciossemana09/src/app/: __init__.py
SEMANA 09/Exercicios/exerciciossemana09/tests/: test_app.py
SEMANA 10/Aula 01/flaskapi/: .env  app.py  pyproject.toml  requirements.txt
SEMANA 10/Aula 01/flaskapi/src/app/: __init__.py
SEMANA 10/apiExercicios/exerciciosemana10/: .env  pyproject.toml  requirements.txt
SEMANA 10/apiExercicios/exerciciosemana10/src/app/: __init__.py
SEMANA 10/apiExercicios/exerciciosemana10/src/app/config/: __init__.py
SEMANA 10/apiExercicios/exerciciosemana10/src/app/controllers/: alunos.py  disciplinas.py  teste.py
SEMANA 10/apiExercicios/exerciciosemana10/src/app/db/: __init__.py
SEMANA 10/apiExercicios/exerciciosemana10/src/app/migrations/versions/: 23d817b7980c_.py  3de0fa30ca63_.py  4248c71c26e5_.py  888910ab4181_.py  e27327f814f7_.py
SEMANA 10/apiExercicios/exerciciosemana10/src/app/models/: aluno.py  curso.py  departamento.py  disciplina.py  matricula.py  matriz_curso.py
SEMANA 10/apiExercicios/exerciciosemana10/src/app/routes/: __init__.py
SEMANA 10/apiExercicios/exerciciosemana10/tests/: test_app.py
(+25 files in other folders)
